new card added folder name is beach

--- a/Binance/binance.css
+++ b/Binance/binance.css
@@ -10,24 +10,28 @@ body {
 }
 
 .background-text {
+    margin: auto;
     z-index: 5;
-    width: 45%;
+    max-width: 500px;
     padding: 40px 0;
     text-align: center;
     border-top-left-radius: 70px;
     border-bottom-right-radius: 70px;
     color: #fff;
     font-weight: bold;
-    border: 5px inset rgb(214, 212, 97);
+    border: 5px inset rgb(111 74 39);
     background-image: url("https://images.unsplash.com/photo-1614787296891-d1b2b1aced36?ixlib=rb-1.2.1&raw_url=true&q=80&fm=jpg&crop=entropy&cs=tinysrgb&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870");
     background-repeat: no-repeat;
     background-size: cover;
     transition: all ease-in 0.2s;
+    position: absolute;
+    bottom: 25%;
+    right: 25%;
 }
 
-.background-text:hover {
+/* .background-text:hover {
     transform: translateY(5px);
-}
+} */
 
 .background-text h1 {
     font-family: system-ui;
@@ -54,16 +58,16 @@ body {
     font-family: system-ui;
     display: inline-block;
     padding: 7px 30px;
-    border: 2px inset rgb(214, 212, 97);
+    border: 2px solid rgb(111 74 39);
     font-size: 18px;
     text-decoration: none;
     color: #fff;
     margin-top: 15px;
-    /* transition: all ease 0.2s; */
+    transition: all ease 0.2s;
     border-radius: 20px 0px 20px 0px
 }
 
-/* .background-text a:hover {
+.background-text a:hover {
     transform: translateY(-5px);
     background-color: rgb(26, 26, 26);
     color:rgb(231, 255, 146);
@@ -71,5 +75,5 @@ body {
             rgba(231, 255, 146, 1) 0%,
             rgba(130, 139, 54, 1) 0%,
             rgba(166, 170, 80, 1) 38%,
-            rgba(255, 248, 143, 1) 100%); */
+            rgba(255, 248, 143, 1) 100%); 
 }
