--- a/CSS-Snippets/Beach/beach.css
+++ b/CSS-Snippets/Beach/beach.css
@@ -3,24 +3,30 @@
   padding: 0;
 }
 
-body {
+/* body {
   max-width: 465px;
   position: absolute;
   top: 5%;
   right: 35%;
-}
+} */
 
 .card {
-  min-width: 468px;
+  max-width: 468px;
+  min-width: 350px;
   min-height: 580px;
-  background-color: rgb(0 92 171);
+  background-color: rgb(200 210 255);
+  border-radius: 6px;
+  margin: 30px auto;
 }
 
 .card .card-body {
   background-image: url("https://images.unsplash.com/photo-1506929562872-bb421503ef21?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=468&q=80");
+  background-repeat: no-repeat;
   transform: rotate(6deg);
-  min-width: 468px;
+  max-width: 468px;
+  min-width: 350px;
   min-height: 580px;
+  border-radius: 6px;
   position: relative;
   box-shadow: rgb(0 0 0 / 40%) 0px 2px 4px, rgb(0 0 0) 0px 7px 13px -3px, rgb(0 0 0 / 20%) 0px -3px 0px inset
 }
@@ -28,6 +34,7 @@ body {
 .card .card-body .card-text {
   position: absolute;
   bottom: 0;
+  left: 0;
   background: rgba(255, 255, 255, 0.60);
   width: -webkit-fill-available;
   padding: 80px 0px 50px 30px;
@@ -43,7 +50,6 @@ body {
 
 .card .card-body .card-text p {
   font-family: system-ui;
-  font-weight: lighter;
 }
 
 .card .card-body .card-text span {
