--- a/CSS-Snippets/Book/book.css
+++ b/CSS-Snippets/Book/book.css
@@ -3,21 +3,14 @@
     margin: 0;
 }
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
     background: rgb(111 107 103);
   }
   .card-container{
     display: flex;  
-    max-width: 700px;
-    min-height: 400px;
     overflow: hidden;
     border-radius: 10px 0 0 10px;
   }
   .card-container .card-detail{
-    min-width: 150px;
     border-radius: 0px 75px 0px 0px;
     z-index: 1;
     background: rgb(209,209,209);
@@ -44,11 +37,13 @@ body {
     color: gray;
   }
   .card-container .card-image{
-    background-image: url("https://images.unsplash.com/photo-1532012197267-da84d127e765?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE4fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60");
-    background-position: center left;
     position: relative;
     right: 85px;
     z-index: 0;
-    min-width: 400px;
+    min-width: 290px;
     border-radius: 0 10px 10px 0;
+}
+.card-container .card-image img{
+  width: 100%;
+  height: 100%;
 }
