burger card added

--- a/CSS-Snippets/Fast-food/style.css
+++ b/CSS-Snippets/Fast-food/style.css
@@ -28,32 +28,34 @@ body {
     position: relative;
     border-radius: 10px;
     overflow: hidden;
-    transition: transform 500ms ease;
 }
-.card:hover{
-    transform: scale(1.05);
-}
-
-.card .card-image {}
 
 .card .card-image img {
     width: 100%;
+    vertical-align: middle;
+    transition: transform 500ms ease;
+}
+
+.card:hover .card-image img {
+    transform: scale(1.10);
 }
 
 .card .card-content {
     color: aliceblue;
     position: absolute;
-    bottom: 4px;
+    bottom: 0;
     padding: 17px 20px 17px 20px;
     background: linear-gradient(hsl(0 0% 0% /0), hsl(20 0% 0% /0.5) 20%, hsl(0 0% 0% /0.7));
     width: -webkit-fill-available;
     transform: translateY(62%);
-    transition: transform 500ms ease;
+    transition: transform 450ms ease;
     text-align: center;
 }
-.card:hover .card-content{
+
+.card:hover .card-content {
     transform: translateY(0);
 }
+
 .card .card-content span {
     font-size: 17px;
     font-weight: 700;
