--- a/CSS-Snippets/Burger/style.css
+++ b/CSS-Snippets/Burger/style.css
@@ -9,7 +9,7 @@
 html,
 body {
     height: 100%;
-    background-color: #363636;
+    background: radial-gradient(#2a4f516e, #1d1c29c9);
 }
 
 .main-container {
@@ -43,17 +43,17 @@ body {
 .card .card-content {
     color: aliceblue;
     position: absolute;
-    bottom: 0;
+    bottom: 5px;
     padding: 17px 20px 17px 20px;
-    background: linear-gradient(hsl(0 0% 0% /0), hsl(20 0% 0% /0.5) 20%, hsl(0 0% 0% /0.7));
+    background: linear-gradient(hsl(0 0% 0% /0), hsl(20 0% 0% /0.4) 30%, hsl(0 0% 0% /0.7));
     width: -webkit-fill-available;
     transform: translateY(62%);
-    transition: transform 450ms ease;
+    transition: transform 500ms ease;
     text-align: center;
 }
 
 .card:hover .card-content {
-    transform: translateY(0);
+    transform: translateY(0) scale(1.10);
 }
 
 .card .card-content span {
@@ -63,7 +63,7 @@ body {
 }
 
 .card .card-content p {
-    padding-bottom: 8px;
+    padding: 5px 0 14px 0;
     font-size: 12px;
     color: #a7a7a7;
 }
