simple folder added

--- a/CSS-Snippets/Dubai/style.css
+++ b/CSS-Snippets/Dubai/style.css
@@ -9,7 +9,7 @@
 html,
 body {
     height: 100%;
-    background: radial-gradient(#70293d78, #002031);
+    background: radial-gradient(#85999f7a, #314d60);
 }
 
 .main-container {
