--- a/CSS-Snippets/football/style.css
+++ b/CSS-Snippets/football/style.css
@@ -26,38 +26,36 @@ position: relative;
 .card .card-image{
     width: 70px;
     height: 70px;
-    border-radius: 50%;
     overflow: hidden;
-    border: 2px outset rgb(135 151 255);
     position: relative;
     z-index: 1;
-    transition: 0.4s;
+    transition: 0.6s;
+    opacity: 0.85;
 }
 .card:hover .card-image{
-    transform: translateX(180px);
+    transform: translateX(180px) rotate(230deg);
 }
 .card .card-image img{
     width: 100%;
     
 }
 .card .card-content{
-    background: linear-gradient(90deg, rgb(0 99 59) 0%, rgb(176 194 204) 89%);
+    background: linear-gradient(0deg, rgb(28 81 46) 0%, rgb(171 242 209) 89%);
+    
     position: absolute;
     top: 4px;
     z-index: 0;
-    /* width: -webkit-fill-available; */
     border-radius: 50px;
     text-align: center;
     padding: 20px 70px 20px 70px;
 }
 .card .card-content a{
-    padding-left: 7px;
+    padding: 10px 7px;
     text-decoration: none;
     color: #393535;
     font-weight: 700;
-    transition: 0.5s;
+    transition: 0.7s;
 }
 .card:hover .card-content a{
-color: rgb(245, 245, 245);
-padding-left: 0px;
+color: rgb(230, 230, 230);
 }
